<resources>
    <string name="app_name">HiltSample</string>
    <string name="title_discover">Discover</string>
    <string name="title_notes">Notes</string>
    <string name="title_macthes">Matches</string>
    <string name="title_profile">Profile</string>
    <string name="add_post">Add Post</string>
    <string name="video_uri">Video Uri</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
</resources>