<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="isNetworkCalling"
            type="boolean" />

        <variable
            name="model"
            type="com.technorapper.hiltsample.LaunchDetailsQuery.Post" />

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            app:cardBackgroundColor="@color/grey_fff2f2f2"
            app:cardCornerRadius="6dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_background_grey"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/title"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            app:cardBackgroundColor="@color/grey_fff2f2f2"
            app:cardCornerRadius="6dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_background_grey"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/description"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            app:cardBackgroundColor="@color/grey_fff2f2f2"
            app:cardCornerRadius="6dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@drawable/edittext_background_grey"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/uri"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/video_uri"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="6dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="@{safeUnbox(isNetworkCalling)?View.VISIBLE:View.GONE,default=gone}" />

                <Button
                    android:layout_width="match_parent"
android:id="@+id/saveBtn"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:backgroundTint="@null"
                    android:hapticFeedbackEnabled="true"
                    android:text="Save"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:visibility="@{safeUnbox(!isNetworkCalling)?View.VISIBLE:View.GONE}" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>